--- a/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
+++ b/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'About the design system team: Goals, pains, and successes'
-pubDate: 2025-08-10
+pubDate: 2025-08-11
 slug: /about-design-system-team
 heroImage: ./photo-1698579302455-9494af230db2.avif
 heroImageMeta:
@@ -14,42 +14,33 @@ tags:
  - ui
 ---
 
-In this post, I want to share my experience of working in multiple design system teams, and it will not be a technical post, but more about the goals, pains, and successes of a design system team.
+In this post, I want to share my experience of working in multiple design system teams, and it will not be a technical post, but more about the goals, pains, and successes of it.
 
 ## Introduction
 
-A design system is a collection of reusable components, guidelines, patterns, and best practices that help a company to **build consistent** and **efficient user** interfaces. It provides the building blocks to create a cohesive user experience across your product or products and platforms. Multiple disciplines are involved: Design, Frontend engineering, Product management, and more.
+A design system is a **collection of reusable components, guidelines, patterns**, and best practices (including **accessibility** and responsiveness) that help a company to **build consistent** and **efficient user** interfaces. It provides the building blocks to create a cohesive user experience across your product or products and platforms. Multiple disciplines are involved: Design, Frontend engineering, Product management, and more.
 
-A design system team is a group of people who cover the disciplines mentioned and who are responsible for the design system.
+A *design system team* is a group of people who cover the disciplines mentioned and who are responsible for the *design system*.
 
-**- Is it always necessary to have a design system?** I think so (at least in most cases), a design system helps to create consistent user experiences, to speed up the development process, and to make the base maintainable.
+**- Is it always necessary to have a design system?**: I think so (at least in most cases), it helps to create consistent user experiences, to speed up the development process, and to make the base maintainable.
 
-**- Is it always necessary to have a design system team?** 
-No, depending on the size of your company and the complexity of your product, you can use a third-party design system, or the same designers, product managers, and engineers can work on the design system at the same time as they work on the product. 
-
-But if you have a complex product or a large team, then it is worth having a dedicated design system team to ensure that the design system is well-maintained, up-to-date, and aligned with the product's goals.
-
-**A design system is a kind of commodity**, but it doesn't mean it is not **important**:
-
-- It means it has no value by itself; it needs to be used by the product teams to create value. 
-
-- It doesn't mean you should not put attention or resources on it. Investing in the design system can lead to significant long-term benefits for the entire organization.
-
-As a similarity, we can think of electricity: it is a commodity, but it is essential for the functioning of many products and services; if the supply is not good, it will be hard to create good products, or they will not be usable if the supply fails. A design system is like electricity, it is a commodity that provides the foundation for building products and services, and needs to be good to create nice productś.
+**- Is it always necessary to have a *design system team*?**: No, depending on the size of your company and the complexity of your product, you can use a third-party design system, or the product team(s) can work on it at the same time as they work on the product. But if you have a **complex product or a large team**, then it is **worth having a dedicated team** to ensure that the design system is well-maintained, up-to-date, and aligned with the product's goals.
 
 ## Goals of a design system team
 
-**The main goal of a design system team is to free up product teams from non-product-related tasks. Letting them focus on building product-related features and solving user problems.**
+**The final (and more important) goal is to free up product teams from non-product-related tasks. Letting them focus on building product-related features and solving user problems.**
 
-They should not worry about (or solve) common design tokens, components, patterns, or workflows. Each second they spend on those tasks is a second they are not spending creating a better product.
+They should not worry about (or solve) common design tokens, components, accessibility, patterns, or workflows. **Each second they spend on those tasks is a second they are not spending creating a better product.**
 
-In any case, we can split that goal into smaller goals:
+We can split that goal into smaller goals:
 
-The goals of a dedicated design system team can vary depending on the company and product, but some common goals include:
+They can vary depending on the company and product, but some common goals include:
 
-- **Create the design tokens**: Design tokens are the variables that define the design system's visual style, such as colors, typography, spacing, etc. They should be consistent and reusable across the design system.
+- **Create the design tokens**: Design tokens are the variables that define the design system's visual style, such as colors, typography, spacing, etc. They should be consistent and reusable.
 
 - **Create the basic UI components**: Those components are the building blocks of the design system, such as buttons, inputs, modals, etc. They should be reusable and customizable to fit different use cases. They are commodity components; every design system has them, but they should be well-designed and well-implemented to ensure a consistent user experience. Even if they are common, simple, and commodity components, there are important decisions to be made regarding consistency. For example, in a button, we can render icons in the left or right side, or just on the left side.
+
+- **Ensure the components are accessible**: Accessibility is a critical aspect of any design system, and the components should be designed and implemented to be accessible to all users, including those with disabilities. 
 
 - **Define the common patterns**: For example, how to render the tabular data, the elements can be rendered in a table, etc
 
@@ -58,7 +49,11 @@ The goals of a dedicated design system team can vary depending on the company an
 
 ## Clients of the design system team
 
-In a **product team**, the client of the delivery is clear: it is the **customer**, or the people who use the application. In a **platform team**, the clients are the **engineering teams**. In a **Design System team**, the clients are both, the **customers** (because are the ones that consume and use the components, patterns and workflows) and the **product teams (product managers, engineers and designers)** as they creates the product based in the components, patterns and workflows the design system team provides.
+In a **product team**, the client of the delivery is clear: it is the **customer**, or the people who use the application. 
+
+In a **platform team**, the clients are the **engineering teams**. 
+
+In a **Design System team**, the clients are both, the **customers** (because are the ones that consume and use the components, patterns and workflows) and the **product teams (product managers, engineers and designers)** as they creates the product based in the components, patterns and workflows the design system team provides.
 
 This is very important because, as a design system team, you need to understand the needs of both the customers and the product teams. You need to create components, patterns, and workflows that are easy to use, flexible, and customizable, but also meet the needs of the customers.
 
@@ -84,6 +79,7 @@ AI agents can complement the deterministic codmods, and they are also very helpf
 For the components don't match 1:1 with the new ones, for the patterns and workflows, you can do the same: Replace them gradually, but in this case the migraction needs more understanding of the context and the use cases, so you need to work closely with the product teams to understand their needs and how to migrate the components, patterns and workflows, and again you are not getting to much feedback until the migration is done.
 
 #### Vertical migration
+
 - Another strategy is **to work with a product team, for a specific page or workflows, and think about how to migrate them together.** creating the new component, patterns, and workflow during this process. The output of this process is not a final design system (not all the necessary components, patterns and workflows are created yet), it will be a page that follows completely the new design system (components, patterns and workflows), but you will have a bunch of them, and you can use them in the next page to migrate, a page that will need more components, patterns and workflows... This is a more iterative approach, and allows you to get feedback from the product team and the customers earlier in the process and improve them.
 
 In terms of inconsistencies, this will create vertical inconsistencies, inconsistencies between the pages of the same product.
@@ -120,11 +116,14 @@ To minimize the frustration of the product teams:
 - to **provide clear documentation** and examples of how to use the components, patterns, and workflows, with good examples (storybook is a nice tool for this), with clear guidelines and best practices.
 - **be fast to respond to their feedback/questions/requests**, if you are not fast in providing an answer to a doubt or implementing a feature, it can lead to finding shortcuts or workarounds that can lead to inconsistencies in the product.
 
-
-
 ## Summary
 
-A **good design system** and a good design system team **will not make your product better magically**, make the development faster and the user experience consistent, but a **bad design system will make your product worse**, providing an inconsistent and frustrating user experience. I will not provide the building blocks to the product teams to create a good product, and they will spend more time on non-product-related tasks, instead of focusing on building product features and solving user problems.
+**A design system is a kind of commodity**, but it doesn't mean it is not **important**:
 
+- It means it has no value by itself; it needs to be used by the product teams to create value. 
 
+- It doesn't mean you should not put attention or resources on it. Investing in the design system can lead to significant long-term benefits for the entire organization.
 
+A **good design system** and a good design system team **will not make your product better magically**, make the development faster and the user experience consistent, but a **bad design system will make your product worse**, providing an inconsistent and frustrating user experience, and forcing the product teams to spend time solving the issue and building blocks that should be provided by the design system, spending time in non-product-related tasks instead of focusing on building product features and solving user problems.
+
+As a similarity, we can think of electricity: it is a commodity, but it is essential for the functioning of many products and services; if the supply is not good, it will be hard to create good products, or they will not be usable if the supply fails. A design system is like electricity, it is a commodity that provides the foundation for building products and services, and needs to be good to create nice products.
