post: design system teams review

--- a/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
+++ b/src/content/blog/2025/2025-07-30-adesign-system-team/index.mdx
@@ -12,6 +12,7 @@ tags:
  - teams
  - design system
  - ui
+ - opinion
 ---
 
 In this post, I want to share my experience of working in multiple design system teams, and it will not be a technical post, but more about the goals, pains, and successes of it.
