--- a/src/content/blog/2025/2025-08-22-15-years/index.mdx
+++ b/src/content/blog/2025/2025-08-22-15-years/index.mdx
@@ -23,11 +23,11 @@ To give you context, in 2010 the most used browser was Internet Explorer with mo
 
 The smartphones started to gain popularity (3 years before the frist iPhone was launched) and Android was in version 2.2 ([Froyo](https://en.wikipedia.org/wiki/Android_Froyo)).
 
-Node.js was launched one year before and its popularity was not the one we see today. I wrote a post about my frist contact with it :astro-ref[Node.js: Javascript power!!]{path="blog/2010/nodejs-javascript-power"} (Spanish).
+Node.js was launched one year before and its popularity was not the one we see today. I wrote a post about my rist contact with it :astro-ref[Node.js: Javascript power!!]{path="blog/2010/nodejs-javascript-power"} (Spanish).
 
-I was programming in PHP (Version 5) and exploring the possibilities of JavaScript on the server side, also using [jQuery](https://jquery.com/), and still uploading the websites using via FTP Filezilla. 
+I was programing in PHP (Version 5) and exploring the possibilities of JavaScript on the server side, also using [jQuery](https://jquery.com/), and still uploading the websites using a Filezilla. 
 
-My skills in speaking or writing in English were near zero. 
+My skills speaking or writing in English were near zero. 
 
 In general terms, the web development was quite different from today. Handling Internet Explorer 6/7 was a nightmare; each browser had a different implementation of the standards, and the mobile web was in its infancy. Making a rounded corner was a challenging task that usually involved images.
 
@@ -37,6 +37,6 @@ Over these 15 years, a lot has changed; the technical context is very different,
 
 I also changed a lot. I learned new programming languages, frameworks, and tools that have shaped my career. I collaborated with the local community, survived lymphoma, learned English, worked at big companies, met a lot of people, and I am still here, writing in my blog.
 
-I try to imagine myself in 15 years, but is very hard to predict where I will be, but Iḿ pretty sure that I will still being curious, with a strong desire to learn, understand how the things works under the hood and adapt to new challenges.
+I try to imagine myself in 15 years, but it is very hard to predict where I will be. But I'm pretty sure that I will still be curious, with a strong desire to learn, understand how things work under the hood, and adapt to new challenges.
 
-I only can say thanks to you for reading and being part of this journey.
+I can only say thanks to you for reading and being part of this journey.
