--- a/src/content/blog/2025/2025-08-22-15-years/index.mdx
+++ b/src/content/blog/2025/2025-08-22-15-years/index.mdx
@@ -2,40 +2,39 @@
 title: '15 years of posts'
 pubDate: 2025-08-25
 slug: /15-years-of-posts
-heroImage: ./photo-1698579302455-9494af230db2.avif
+heroImage: ./ChatGPT.png
 heroImageMeta:
-  author: "bitan005"
-  licence: "https://unsplash.com/license"
-  source: "https://unsplash.com/es/fotos/un-primer-plano-de-un-modelo-lego-de-un-edificio-3dva77qVGds"
+  author: "ChatGPT"
+  prompt: "Draw a photorealistic 16:9 image of graffiti with numbers designed in multiple colors on a centered wall that shows a large 15. The floor is full of fallen calendar pages, and the wall is pale blue and green with a texture that represents the passage of time but without being dirty."
 tags:
  - summary
  - personal
 ---
 
-On a day like the one I wrote this post, 15 years ago, I wrote first post. I was about :astro-ref[using the page title to show page notifications]{path="blog/2010/usabilidad-notificaciones-en-el-titulo-de-la-pagina"} (Spanish).
+On a day like this, 15 years ago, I wrote my first post. It was about :astro-ref[using the page title to show page notifications]{path="blog/2010/usabilidad-notificaciones-en-el-titulo-de-la-pagina"} (Spanish).
 
 I wrote it just as a way to share my knowledge and force myself to learn more about a topic before writing the post.
 
 With today's eyes, that post seems quite naive and simplistic, but it was a starting point of a long journey. I never imagined that this blog would last for so long. 
 
-To give you context, in 2010 the most used browser was Internet Explorer with more than 50%, Firefox was used by the 33% of the users and Chrome was just starting to gain traction. <small>Source: https://gs.statcounter.com/browser-market-share/desktop/worldwide/2010</small>
+To give you context, in 2010 the most used browser was Internet Explorer with more than 50%, Firefox was used by the 33% of users and Chrome was just starting to gain traction. <small>Source: https://gs.statcounter.com/browser-market-share/desktop/worldwide/2010</small>
 
 
-The smartphones started to gain popularity (3 years before the frist iPhone was launched) and Android was in version 2.2 ([Froyo](https://en.wikipedia.org/wiki/Android_Froyo)).
+Smartphones were starting to gain popularity (3 years before the first iPhone was launched)" and Android was in version 2.2 ([Froyo](https://en.wikipedia.org/wiki/Android_Froyo)).
 
-Node.js was launched one year before and its popularity was not the one we see today. I wrote a post about my rist contact with it :astro-ref[Node.js: Javascript power!!]{path="blog/2010/nodejs-javascript-power"} (Spanish).
+Node.js was launched one year before and its popularity was not the one we see today. I wrote a post about my frist contact with it :astro-ref[Node.js: Javascript power!!]{path="blog/2010/nodejs-javascript-power"} (Spanish).
 
-I was programing in PHP (Version 5) and exploring the possibilities of JavaScript on the server side, also using [jQuery](https://jquery.com/), and still uploading the websites using a Filezilla. 
+I was programming in PHP (Version 5) and exploring the possibilities of JavaScript on the server side, also using [jQuery](https://jquery.com/), and still uploading the websites using Filezilla. 
 
-My skills speaking or writing in English were near zero. 
+My skills in speaking and writing English were close to zero.
 
-In general terms, the web development was quite different from today. Handling Internet Explorer 6/7 was a nightmare; each browser had a different implementation of the standards, and the mobile web was in its infancy. Making a rounded corner was a challenging task that usually involved images.
+In general terms, the web development was quite different from today. Handling Internet Explorer 6/7 was a nightmare; each browser had a different implementation of the standards, and the mobile web was in its infancy. Creating rounded corners was a challenging task that usually required images."
 
-2010 was not the start of my career, I started to program in 1985-86 on an Amstrad CPC 464, and I started working professionally (getting money) as a developer in 2005,
+010 was not the start of my career. I began programming in 1985–86 on an Amstrad CPC 464, and I started working professionally (getting paid) as a developer in 2005
 
 Over these 15 years, a lot has changed; the technical context is very different, but our job is still the same: to solve problems and create value through technology. 
 
-I also changed a lot. I learned new programming languages, frameworks, and tools that have shaped my career. I collaborated with the local community, survived lymphoma, learned English, worked at big companies, met a lot of people, and I am still here, writing in my blog.
+I also changed a lot. I learned new programming languages, frameworks, and tools that have shaped my career. I collaborated with the local community, survived lymphoma, learned English, worked at big companies, met a lot of people, and I am still here, writing on my blog.
 
 I try to imagine myself in 15 years, but it is very hard to predict where I will be. But I'm pretty sure that I will still be curious, with a strong desire to learn, understand how things work under the hood, and adapt to new challenges.
 
