--- a/src/content/blog/2025/2025-08-22-15-years/index.mdx
+++ b/src/content/blog/2025/2025-08-22-15-years/index.mdx
@@ -9,9 +9,11 @@ heroImageMeta:
 tags:
  - summary
  - personal
+ - blog
+ - 
 ---
 
-On a day like this, 15 years ago, I wrote my first post. It was about :astro-ref[using the page title to show page notifications]{path="blog/2010/usabilidad-notificaciones-en-el-titulo-de-la-pagina"} (Spanish).
+**On a day like this, 15 years ago, I wrote my first post**. It was about :astro-ref[using the page title to show page notifications]{path="blog/2010/usabilidad-notificaciones-en-el-titulo-de-la-pagina"} (Spanish).
 
 I wrote it just as a way to share my knowledge and force myself to learn more about a topic before writing the post.
 
@@ -34,8 +36,8 @@ In general terms, the web development was quite different from today. Handling I
 
 Over these 15 years, a lot has changed; the technical context is very different, but our job is still the same: to solve problems and create value through technology. 
 
-I also changed a lot. I learned new programming languages, frameworks, and tools that have shaped my career. I collaborated with the local community, survived lymphoma, learned English, worked at big companies, met a lot of people, and I am still here, writing on my blog.
+**I also changed a lot. I learned new programming languages, frameworks, and tools that have shaped my career. I collaborated with the local community, survived lymphoma, learned English, worked at big companies, met a lot of people and made very good friends, and I am still here, writing on my blog.**
 
-I try to imagine myself in 15 years, but it is very hard to predict where I will be. But I'm pretty sure that I will still be curious, with a strong desire to learn, understand how things work under the hood, and adapt to new challenges.
+**I try to imagine myself in 15 years, but it is very hard to predict where I will be. But I'm pretty sure that I will still be curious, with a strong desire to learn, understand how things work under the hood, and adapt to new challenges.**
 
 I can only say thanks to you for reading and being part of this journey.
